--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.7",
     "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^9.3.0",
     "prettier": "^3.2.4",
@@ -33,15 +34,20 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "dotenv": "^16.4.1",
-    "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.90.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.14",
     "copy-webpack-plugin": "^12.0.2",
+    "dotenv": "^16.4.1",
     "glob": "^10.3.10",
+    "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.7",
     "purgecss-webpack-plugin": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8",
+    "webpack": "^5.90.0",
     "webpack-merge": "^5.10.0"
   }
 }
