--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": "./src",
     "paths": {
       "*": ["*", "src/*"],
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     },
     "esModuleInterop": true,
     "jsx": "react-jsx",
