--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "purgecss-webpack-plugin": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "webpack": "^5.90.0",
     "webpack-merge": "^5.10.0"
