--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,12 @@
       }
     }
   },
+  "env": {
+    "browser": true
+  },
+  "globals": {
+    "matchMedia": "readonly"
+  },
   "rules": {
     "import/extensions": [
       "error",
