--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
   },
-  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "dist"],
 }
