--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.34",
     "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.14",
+    "@reduxjs/toolkit": "^2.1.0",
     "copy-webpack-plugin": "^12.0.2",
     "dotenv": "^16.4.1",
     "glob": "^10.3.10",
@@ -50,7 +52,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "react-virtualized": "^9.22.5",
     "styled-components": "^6.1.8",
     "webpack": "^5.90.0",
     "webpack-merge": "^5.10.0"
