--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-virtualized": "^9.21.29",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "css-loader": "^6.10.0",
